--- a/TeamUnderDog/app/src/main/AndroidManifest.xml
+++ b/TeamUnderDog/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TeamUnderDog">
-        <activity android:name=".MainActivity">
+        <activity android:name=".SportsActivity" />
+
+        <activity android:name=".MainActivity"/>
+        <activity android:name=".RoutineActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
